--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,14 @@ nav a{
 .producto{
     background-color:#ffe7e6ef;
     border-color: #fed1cd;
+    box-shadow: #806375 4px 4px 4px;
+    border-radius: 10px;
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 20px;
 }
 .comprar{
     background-color: #806375;
@@ -216,25 +224,6 @@ table {
     margin-top: 30px;
     display: block;
     text-align: center;
-}
-
-@media (max-width: 768px) {
-    .tienda {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-        margin-top: 10px;
-    }
 }
 
 .banner-container {
